<resources>
    <!--<string name="app_name">Tap Note</string>-->
    <string name="backup_restore">Backup/Restore</string>
    <string name="backup_text">Backup will export all your notes into the folder below.</string>
    <string name="backup_folder">Backup folder:</string>
    <string name="create_backup">Create backup</string>
    <string name="restore_backup">Restore backup</string>
    <string name="restore_confirm">I understand all my current notes will be lost.</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="starred">Starred</string>
    <string name="general">General</string>
    <string name="feedback">Feedback</string>
    <string name="delete">Delete</string>
    <string name="about">About</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="note">Note</string>
    <string name="star">Star</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="search">Search</string>
    <string name="search_noresults">No results were found for your search</string>
    <string name="sort">Sort</string>
    <string name="action_sort_newest">Newest</string>
    <string name="action_sort_oldest">Oldest</string>

    <!--About page-->
    <string name="app_description">A minimalist and Material design note! Tap Note is the easiest way to keep track of your thoughts and ideas.</string>
    <string name="rate_googleplay">Rate on Google Play</string>
    <string name="follow_googleplus">Join the community on Google+</string>
    <string name="about_license">Licenses</string>

    <string name="permission_backup_explain">Tap Note need Storage permission to backup your data</string>
    <string name="permission_backup_denied">You previously denied the permission to Storage. You have to manually grant this permission in Settings </string>

    <!--Preference strings-->
    <string name="prefs_delete_db">Delete Database</string>
    <string name="prefs_summary_delete_db">Remove all notes from your device</string>
    <string name="delete_confirmation">You\'ll lose all your notes!</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="import_failed_nofile">There is no readable backup file.</string>
    <string name="import_failed_noread">The backup file is not readable.</string>

    <string name="pref_theme">pref_theme</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_value_light">light</string>
    <string name="pref_theme_value_dark">dark</string>

    <!--Mail strings-->
    <string name="mail_subject">Feedback for Tap Note</string>
    <string name="mail_chooser_title">Choose an Email client :</string>

    <!--Content provider-->
    <string name="authority" translatable="false">com.coltan.tapnote</string>
</resources>
