<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general">

        <ListPreference
            android:key="@string/pref_theme"
            android:title="@string/pref_theme_title"
            android:entries="@array/pref_theme_options"
            android:entryValues="@array/pref_theme_values"
            android:defaultValue="@string/pref_theme_value_light"
            android:dialogTitle="@string/pref_theme_title" />

        <com.coltan.tapnote.DeleteDatabasePreference
            android:defaultValue="Default Value"
            android:dialogLayout="@layout/dialog_delete_database"
            android:dialogMessage="Are you sure you want to delete all your note?"
            android:dialogTitle="@string/are_you_sure"
            android:key="preference_key"
            android:summary="@string/prefs_summary_delete_db"
            android:title="@string/prefs_delete_db" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="@string/about">

        <PreferenceScreen
            android:summary="@string/prefs_about_version"
            android:title="@string/prefs_about_title">
            <intent android:action=".AboutActivity" />
        </PreferenceScreen>

    </PreferenceCategory>-->

</PreferenceScreen>
