<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        android:orderInCategory="1"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_action_sort"
        android:title="@string/sort"
        android:orderInCategory="2"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_action_sort_oldest"
                android:title="@string/action_sort_oldest" />
            <item
                android:id="@+id/menu_action_sort_newest"
                android:title="@string/action_sort_newest" />
        </menu>
    </item>
</menu>