<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"/>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:elevation="4dp">

        <TextView
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/primary"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/ic_launcher"/>

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/app_description"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:fontFamily="sans-serif-thin"
            android:gravity="center_horizontal"
            android:lines="3"
            android:text="@string/app_description"
            android:textColor="@color/white"
            android:textSize="15sp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/relativeLayout1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/about_googleplay"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="5dp"
                card_view:cardBackgroundColor="?attr/aboutCardBackground"
                card_view:cardCornerRadius="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/rate_googleplay"
                    android:textColor="?attr/textColor"
                    android:textSize="22sp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/about_googleplus"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/about_googleplay"
                android:layout_margin="5dp"
                card_view:cardBackgroundColor="?attr/aboutCardBackground"
                card_view:cardCornerRadius="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/follow_googleplus"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/about_licenses"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@id/about_googleplus"
                android:layout_margin="5dp"
                card_view:cardBackgroundColor="?attr/aboutCardBackground"
                card_view:cardCornerRadius="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/about_license"
                    android:textColor="?attr/textColor"
                    android:textSize="20sp"/>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>